# kalibr

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  packages-ubuntu-24.04.txt  patch_qa.diff
.github/workflows/: ci-pipeline.yaml
Schweizer-Messer/sm_boost/: CMakeLists.txt
Schweizer-Messer/sm_boost/include/boost/: portable_binary_archive.hpp
Schweizer-Messer/sm_boost/src/: portable_binary_oarchive.cpp
Schweizer-Messer/sm_common/: CMakeLists.txt
Schweizer-Messer/sm_common/include/sm/: progress_info.hpp
Schweizer-Messer/sm_common/test/: CMakeLists.txt
Schweizer-Messer/sm_eigen/: CMakeLists.txt
Schweizer-Messer/sm_eigen/cmake/: Config.cmake.in
Schweizer-Messer/sm_kinematics/: CMakeLists.txt
Schweizer-Messer/sm_kinematics/cmake/: Config.cmake.in
Schweizer-Messer/sm_kinematics/test/: QuaternionTests.cpp
Schweizer-Messer/sm_logging/: CMakeLists.txt
Schweizer-Messer/sm_opencv/: CMakeLists.txt
Schweizer-Messer/sm_property_tree/: CMakeLists.txt
Schweizer-Messer/sm_random/: CMakeLists.txt
Schweizer-Messer/sm_timing/: CMakeLists.txt
Schweizer-Messer/sm_timing/cmake/: Config.cmake.in
aslam_cv/aslam_cameras/: CMakeLists.txt
aslam_cv/aslam_cameras/cmake/: Config.cmake.in
aslam_cv/aslam_cameras/include/aslam/cameras/: CameraGeometry.hpp  CameraGeometryBase.hpp  DepthProjection.hpp  DoubleSphereProjection.hpp  ExtendedUnifiedProjection.hpp  OmniProjection.hpp  PinholeProjection.hpp
aslam_cv/aslam_cameras/include/aslam/cameras/implementation/: CameraGeometry.hpp  DoubleSphereProjection.hpp  ExtendedUnifiedProjection.hpp  OmniProjection.hpp  PinholeProjection.hpp
aslam_cv/aslam_cameras/src/: GridDetector.cpp  OmniCameraGeometry.cpp
aslam_cv/aslam_cameras/test/: CMakeLists.txt  GridCalibration.cpp
aslam_cv/aslam_cameras_april/: CMakeLists.txt
aslam_cv/aslam_cameras_april/include/aslam/cameras/: GridCalibrationTargetAprilgridv2.hpp
aslam_cv/aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp  GridCalibrationTargetAprilgridv2.cpp
aslam_cv/aslam_cameras_april/test/: CMakeLists.txt  GridCalibrationTargetAprilgridv2Test.cpp
aslam_cv/aslam_cv_backend/: CMakeLists.txt
aslam_cv/aslam_cv_backend/cmake/: Config.cmake.in
aslam_cv/aslam_cv_backend/include/aslam/: GridCalibrationTargetDesignVariableContainer.hpp
aslam_cv/aslam_cv_backend/include/aslam/backend/: CameraDesignVariable.hpp
aslam_cv/aslam_cv_backend/include/aslam/backend/implementation/: CameraDesignVariable.hpp
aslam_cv/aslam_cv_error_terms/: CMakeLists.txt
aslam_cv/aslam_cv_error_terms/include/aslam/backend/implementation/: ReprojectionError.hpp
aslam_cv/aslam_cv_serialization/: CMakeLists.txt
aslam_cv/aslam_cv_serialization/cmake/: Config.cmake.in
aslam_cv/aslam_imgproc/: CMakeLists.txt
aslam_cv/aslam_time/: CMakeLists.txt
aslam_cv/aslam_time/cmake/: Config.cmake.in
aslam_cv/aslam_time/include/aslam/: Time.hpp
aslam_incremental_calibration/incremental_calibration/: CMakeLists.txt
aslam_incremental_calibration/incremental_calibration/include/aslam/calibration/algorithms/: linalg.h
aslam_incremental_calibration/incremental_calibration/src/algorithms/: marginalize.cpp
aslam_incremental_calibration/incremental_calibration/src/core/: IncrementalEstimator.cpp
aslam_incremental_calibration/incremental_calibration/test/: AlgorithmsTest.cpp  IncrementalOptimizationProblemTest.cpp  LinearSolverTest.cpp  OptimizationProblemTest.cpp
aslam_nonparametric_estimation/aslam_splines/: CMakeLists.txt
aslam_nonparametric_estimation/bsplines/: CMakeLists.txt
aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt
aslam_offline_calibration/ethz_apriltag2/cmake/: Config.cmake.in
aslam_offline_calibration/ethz_apriltag2/src/: TagDetector.cc
aslam_offline_calibration/kalibr2/: CMakeLists.txt
aslam_offline_calibration/kalibr2/cmake/: Config.cmake.in
aslam_offline_calibration/kalibr2/include/kalibr2/: BasicMathUtils.hpp  CalibrationTools.hpp  CameraCalibrator.hpp  CameraGraph.hpp  CameraModels.hpp  Image.hpp  SyncedObservationView.hpp  SynchronizedObservationView.hpp
aslam_offline_calibration/kalibr2/src/: BasicMathUtils.cpp  CalibrationTools.cpp  CameraCalibrator.cpp  CameraGraph.cpp  Image.cpp  SyncedObservationView.cpp  SynchronizedObservationView.cpp  main.cpp
aslam_offline_calibration/kalibr2/test/: CMakeLists.txt  CameraGraphTest.cpp  ImageTest.cpp  SyncedObservationViewTest.cpp  SynchronizedObservationViewTest.cpp
aslam_offline_calibration/kalibr2_ros/: CMakeLists.txt  calibration_config.yaml  package.xml
aslam_offline_calibration/kalibr2_ros/include/kalibr2_ros/: BagReader.hpp  Config.hpp  KalibrToROSConverter.hpp  KalibrToROSModelConverter.hpp  QualityAssurance.hpp  ROSToYAMLConverter.hpp
aslam_offline_calibration/kalibr2_ros/src/: BagReader.cpp  CalibrateCameras.cpp  Config.cpp  KalibrToROSConverter.cpp  ROSToYAMLConverter.cpp
aslam_offline_calibration/kalibr2_ros/test/: BagReaderTest.cpp  CMakeLists.txt  ConfigTest.cpp  ROSToYAMLConverterTest.cpp
aslam_offline_calibration/kalibr2_ros/test/data/: missing_target_config.yaml  valid_config.yaml
aslam_offline_calibration/ros2_kalibr2/: CMakeLists.txt  package.xml
aslam_offline_calibration/ros2_kalibr2/include/ros2_kalibr2/: BagReader.hpp
aslam_offline_calibration/ros2_kalibr2/src/: BagReader.cpp
aslam_offline_calibration/ros2_kalibr2/test/: BagReaderTest.cpp
aslam_offline_calibration/simple_graph/: CMakeLists.txt
aslam_offline_calibration/simple_graph/cmake/: Config.cmake.in
aslam_optimizer/aslam_backend/: CMakeLists.txt
aslam_optimizer/aslam_backend/include/aslam/backend/implementation/: Cholmod.hpp
aslam_optimizer/aslam_backend/src/: Optimizer.cpp
aslam_optimizer/aslam_backend/test/: LinearSolverTests.cpp
aslam_optimizer/aslam_backend_expressions/: CMakeLists.txt
aslam_optimizer/sparse_block_matrix/: CMakeLists.txt
aslam_optimizer/sparse_block_matrix/include/sparse_block_matrix/: linear_solver_spqr.h
docker/: Dockerfile  Dockerfile.ros  docker-compose.yml
tools/: build_and_test.sh
(+1 files in other folders)
